data/derived/sp14/progs/unify/prog0022.ml.out
Characters 53-66:
  | hd::tl -> last tl :: hd;;
              ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
